tests/snapshots/parse_failure__invalid_hex_digit_in_escape.snap
---
source: tests/parse_failure.rs
expression: "format_output_snapshot(json, &annotated)"
---
case --- 
"\u1FZA"
stdout --- 
<empty>
stderr --- 
error: expected hex digit 3 of 4 in escape, found `Z`
 --> stdin:1:6
  |
1 | "\u1FZA"
  | ---  ^
  | ||
  | |\u escape started here
  | opening quote found here
