tests/snapshots/parse_failure__leading_zero_minus_sign_nonzero.snap
---
source: tests/parse_failure.rs
expression: "format_output_snapshot(json, &annotated)"
---
case --- 
-012
stdout --- 
<empty>
stderr --- 
error: unexpected leading zero
 --> stdin:1:1
  |
1 | -012
  | ^-
  |  |
  |  first zero found here
  |
help: remove the leading zeros
  |
1 - -012
1 + -12
  |
