tests/snapshots/parse_failure__object_open_curly.snap
---
source: tests/parse_failure.rs
expression: "format_output_snapshot(json, &annotated)"
---
case --- 
{
stdout --- 
<empty>
stderr --- 
error: expected key or closed curly brace, found no significant characters
 --> stdin:1:1
  |
1 | {
  | ^
  | |
  | expected due to `{`
  |
help: insert the missing curly brace
  |
1 | {}
  |  +
